--- a/app/views/layouts/_login_form.html.erb
+++ b/app/views/layouts/_login_form.html.erb
@@ -1,4 +1,4 @@
-<input class="b-head__login black" type="button" value="Войти" />
+<input class="b-head__login b-button-type-a b-button-enter-to-site" type="button" value="Войти" />  
 <div class="b-head__login_form">
 	<input id="login_name" class="b-head__login_form_text" type="text" placeholder="эл. почта или телефон">
 	<input id="login_password" class="b-head__login_form_text" type="text" placeholder="пароль">
