--- a/app/views/missings/_show_right_sidebar.html.erb
+++ b/app/views/missings/_show_right_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="b-sidebar b-missing__rightside">
 				<p class="b-sidebar__header">Объявление</p>
 				<p>
-					Размещено <%= Russian.strftime @missing.created_at, "%d %B %Y" %> года
+					Размещено <%= Russian.strftime @missing.created_at, "%e %B %Y" %> года
 				</p>
 				<table class="b-missing__author_data">
 					<tr>
