--- a/app/assets/stylesheets/ui.css
+++ b/app/assets/stylesheets/ui.css
@@ -196,7 +196,7 @@
 	background: -moz-linear-gradient(top, #6b6b6b 0%, #424242 70%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6b6b6b), color-stop(70%,#424242)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top, #6b6b6b 0%,#424242 70%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #6b6b6b 0%,#424242 70%); /* Opera11.10+ */
+	background: -o-linear-gradient(top, #6b6b6b 0%,#424242 70%).silver; /* Opera11.10+ */
 	background: -ms-linear-gradient(top, #6b6b6b 0%,#424242 70%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#424242',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #6b6b6b 0%,#424242 70%); /* W3C */
@@ -228,7 +228,89 @@
 	-webkit-box-shadow: inset 0 1px 0 0 #545454, inset 0 -1px 0 0 #3b3b3b, inset 1px 0 0 0 #4f4f4f, inset -1px 0 0 0 #535353;
 	-moz-box-shadow: inset 0 1px 0 0 #545454, inset 0 -1px 0 0 #3b3b3b, inset 1px 0 0 0 #4f4f4f, inset -1px 0 0 0 #535353;
 	box-shadow: inset 0 1px 0 0  #545454, inset 0 -1px 0 0 #3b3b3b, inset 1px 0 0 0 #4f4f4f, inset -1px 0 0 0 #535353;
+}
+
+/* =============== */
+/* = Maroon state = */
+/* =============== */
+.ui-state-default.maroon, .ui-widget-content.maroon .ui-state-default, .ui-widget-header.maroon .ui-state-default
+{ 
+	color:#ffffff;                    
+	border:1px solid #700947;
+	
+ 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #a04b78), color-stop(1, #923b65) );
+	background:-moz-linear-gradient( center top, #a04b78 5%, #923b65 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a04b78', endColorstr='#923b65');
+	background-color:#a04b78;
+	
+	
+   	-moz-box-shadow:inset 0px 0px 0px 1px #a1527d;
+	-webkit-box-shadow:inset 0px 0px 0px 1px #a1527d;
+	box-shadow:inset 0px 0px 0px 1px #a1527d;     
+	
+	
+}
+
+.ui-state-default.maroon a, .ui-state-default.maroon a:link, .ui-state-default.maroon a:visited { color: #1c94c4; text-decoration: none; }
+.ui-state-hover.maroon, .ui-widget-content.maroon .ui-state-hover, .ui-widget-header.maroon .ui-state-hover, .ui-widget-content.maroon .ui-state-focus, .ui-widget-header.maroon .ui-state-focus {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #923b65), color-stop(1, #a04b78) );
+	background:-moz-linear-gradient( center top, #923b65 5%, #a04b78 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#923b65', endColorstr='#a04b78');
+	
+	background-color:#923b65;
+}
+
+.ui-state-hover.maroon a, .ui-state-hover.maroon a:hover { color: #c77405; text-decoration: none; }
+.ui-state-active.maroon, .ui-widget-content.maroon .ui-state-active, .ui-widget-header.maroon .ui-state-active { 		
+  
+}     
+
+/* =============== */
+/* = Silver state = */
+/* =============== */   
+.ui-state-default.silver.blow, .ui-widget-content.silver.blow .ui-state-default, .ui-widget-header.silver.blow .ui-state-default {                    
+	color: #924654;
+	border: 2px solid #cba6ad;
+	
+	-moz-box-shadow:inset 0px 0px 0px 1px #b27c87;
+	-webkit-box-shadow:inset 0px 0px 0px 1px #b27c87;
+	box-shadow:inset 0px 0px 0px 1px #b27c87;
+	
 }   
+
+.ui-state-default.silver, .ui-widget-content.silver .ui-state-default, .ui-widget-header.silver .ui-state-default
+{ 
+	color:#313131;                
+	    
+	border: 2px solid #e2e2e2;    
+	-moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px; border-radius: 5px;
+	          
+	background-color:#f1f2f2;
+ 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f1f2f2) );
+	background:-moz-linear-gradient( center top, #ffffff 5%, #f1f2f2 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f1f2f2');
+	
+	
+   	-moz-box-shadow:inset 0px 0px 0px 1px #c4c4c4;
+	-webkit-box-shadow:inset 0px 0px 0px 1px #c4c4c4;
+	box-shadow:inset 0px 0px 0px 1px #c4c4c4;    
+	
+	
+}
+
+.ui-state-default.silver a, .ui-state-default.silver a:link, .ui-state-default.silver a:visited { color: #1c94c4; text-decoration: none; }
+.ui-state-hover.silver, .ui-widget-content.silver .ui-state-hover, .ui-widget-header.silver .ui-state-hover, .ui-widget-content.silver .ui-state-focus, .ui-widget-header.silver .ui-state-focus {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f1f2f2), color-stop(1, #ffffff) );
+	background:-moz-linear-gradient( center top, #f1f2f2 5%, #ffffff 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f1f2f2', endColorstr='#ffffff');
+	background-color:#dfdfdf;
+}
+
+.ui-state-hover.silver a, .ui-state-hover.silver a:hover { color: #c77405; text-decoration: none; }
+.ui-state-active.silver, .ui-widget-content.silver .ui-state-active, .ui-widget-header.silver .ui-state-active { 	   
+ 
+  
+}
 
 /* =============== */
 /* = Orange state = */
@@ -897,7 +979,7 @@ input.ui-button.red_action, input.ui-button.red_action.ui-state-active {
 .ui-menu .ui-menu-item a {
 	text-decoration:none;
 	display:block;
-	padding:.2em .4em;
+	/* padding:.2em .4em; */
 	line-height:1.5;
 	zoom:1;
 }
@@ -916,6 +998,10 @@ input.ui-button.red_action, input.ui-button.red_action.ui-state-active {
  * http://docs.jquery.com/UI/f#theming
  */
 .ui-button.t-medium { padding: .35em .7em .2em; }   
+.ui-button.t-medium_fat { padding: .45em .7em .4em; }
+.ui-button.t-medium_fat.ui-state-active  { 
+	padding: .5em .7em .35em !important; 
+}
 .ui-button.t-medium.ui-state-active {
 	padding-top: .4em !important;
 	padding-bottom: .15em !important;
@@ -935,15 +1021,14 @@ button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a l
 button.ui-button-icons-only { width: 3.7em; } 
 
 /*button text element */
-.ui-button .ui-button-text { display: block; line-height: 1.4;  }
-.ui-button-text-only .ui-button-text { padding: .2em .5em; }
+.ui-button .ui-button-text { display: block; /*line-height: 1.4;*/  }
+/*.ui-button-text-only .ui-button-text { padding: .2em .5em; }*/
 .ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text { padding: .4em; text-indent: -9999999px; }
 .ui-button-text-icon-primary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .4em 1em .4em 2.1em; }
 .ui-button-text-icon-secondary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .4em 2.1em .4em 1em; }
 .ui-button-text-icons .ui-button-text { padding-left: 2.1em; padding-right: 2.1em; }
 /* no icon support for input elements, provide padding by default */
-input.ui-button { padding: .2em .65em .3em; }
-
+.ui-button { padding: .2em .65em .3em; }
 /*button icon element(s) */
 .ui-button-icon-only .ui-icon, .ui-button-text-icon-primary .ui-icon, .ui-button-text-icon-secondary .ui-icon, .ui-button-text-icons .ui-icon, .ui-button-icons-only .ui-icon { position: absolute; top: 50%; margin-top: -8px; }
 .ui-button-icon-only .ui-icon { left: 50%; margin-left: -8px; }
