--- a/app/assets/stylesheets/app/p-main.css
+++ b/app/assets/stylesheets/app/p-main.css
@@ -47,14 +47,24 @@
 .p-main-suggest {
 	position: relative;
 	float: left;
-
+                        
+	min-height: 400px;
 	width: 100%;
 
 	padding: 30px 0px 20px 0px;
 
 	background: #f7f7f7;
 	border-top: 1px solid #d9d9d9;
-}
+}             
+	.p-main-suggest-info { 
+		position: absolute; 
+		top: 20px; 
+	}         
+	
+	.p-main-suggest-info {
+		display: none;
+	}
+	
 	.p-main-suggest h2{
 		font-size: 21px;
 		font-weight: normal;
