Added: login forms, enter via form(deprecated)

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,7 +9,7 @@
 	<div class="b-main-info-margin grid_5" type="missing">
 		<ul class="b-list p-main-info-list">
 			<li><%= image_tag "missing-ico.png" %></li>
-			<li><h3>Если пропал близкий вам человек push test</h3></li>
+			<li><h3>Если пропал близкий вам человек</h3></li>
 			<li>
 				<p class="p-main-info-text">
 				Мы поможем вам связаться с профессиональными следователями, волонтерами и просто полезными людьми, готовыми заняться поиском пропавшего.
