--- a/app/assets/stylesheets/app/b-head.css
+++ b/app/assets/stylesheets/app/b-head.css
@@ -49,24 +49,12 @@
 	
 	.b-head__login_form {
 		display: none;
+
+		background: #fff !important;
 		
-		text-align: center;
-		font-size: 18px;
-		
+		padding: 30px 0 0 40px !important;
 	}
 	
-	.b-head__login_form_text {
-		margin: 9px 0;
-		width: 275px;
-		height: 25px !important;
-		
-		font-size: 18px;
-		text-align: center;			
-	}
-	
-	#login_name {
-		margin-top: 15px;
-	}
 	.b-head__block {
 		margin: 9px 0;
 	}                
