--- a/app/views/layouts/_service_dialog.html.erb
+++ b/app/views/layouts/_service_dialog.html.erb
@@ -1,11 +1,9 @@
-
-<!-- Dialog with social auth buttons -->
-
-<div class="b-dialog-a p-main-dialog-a-service">
+<div class="b-head__login_form p-main-dialog-a-service">
+	<!-- Dialog with social auth buttons -->
 	<h3>Выберите сервис на котором вы зарегистрированны</h3>
 		
 		<div class="p-main-dialog-a-service-sep">&nbsp;</div>
-
+	
 		<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_fb.png" %>Facebook</a></div>
 		<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_tw.png" %>Twitter</a></div>
 		<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_gl.png" %>Google</a></div>
@@ -13,15 +11,14 @@
 		<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_ya.png" %>Яндекс</a></div>
 		
 		<div class="p-main-dialog-a-service-sep">&nbsp;</div>
-
+	
 	<h3>Или войдите по электронной почте</h3>
 	<ul>
 		<li><div>Почта:</div><input type="text" /></li>
 		<li><div>Пароль:</div><input type="text" /></li>
 	</ul>
-
+	
 	<input class="p-main-dialog-a-service-submit_enter" type="submit" value="Войти" /> 
 	или 
 	<a class="p-main-dialog-a-service-submit_register" href="#">зарегистрироваться</a>
-
 </div>
