--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,26 +39,31 @@
   <div class="container_16">  
 	<div class="grid_16">    
 		<input type="button" class="b-head__login maroon l-right" value="Войти на сайт" />  
-		<!--
-		<div class="b-head__login_form">
-			<%= form_for "user", :url => user_session_path, :remote => true, :tabindex => 1, :html => { :id => "login_form" } do |login_form| %>   
-			<%= login_form.text_field :email, :class => "b-head__login_form_text", :placeholder => "эл. почта или телефон", :tabindex => 2 %>
-			<%= login_form.text_field :password,  :class => "b-head__login_form_text", :placeholder => "пароль", :tabindex => 3 %>
-		<p class="b-head__block">
-			<%= login_form.check_box :remember_me %> <%= login_form.label :remember_me, "запомниь меня", :tabindex => 4 %> 
-			</p>
-			<p class="b-head__block">  
-				<%= login_form.submit "Войти", :class => "t-medium", :tabindex => 5 %>
-			</p>
-			<p class="b-head__block">
-				<%= link_to "вспомнить пароль", new_password_path('user') %>
-			</p>   
-			<% end %>
-
-
+		
+		<div class="b-head__login_form p-main-dialog-a-service">
+			<!-- Dialog with social auth buttons -->
+			<h3>Выберите сервис на котором вы зарегистрированны</h3>
+				
+				<div class="p-main-dialog-a-service-sep">&nbsp;</div>
+			
+				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_fb.png" %>Facebook</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_tw.png" %>Twitter</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_gl.png" %>Google</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_vk.png" %>Вконтакте</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_ya.png" %>Яндекс</a></div>
+				
+				<div class="p-main-dialog-a-service-sep">&nbsp;</div>
+			
+			<h3>Или войдите по электронной почте</h3>
+			<ul>
+				<li><div>Почта:</div><input type="text" /></li>
+				<li><div>Пароль:</div><input type="text" /></li>
+			</ul>
+			
+			<input class="p-main-dialog-a-service-submit_enter" type="submit" value="Войти" /> 
+			или 
+			<a class="p-main-dialog-a-service-submit_register" href="#">зарегистрироваться</a>
 		</div>
-			-->
-			<%= render :partial=> 'service_dialog'%>
 	</div>
        
     
