--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -26,16 +26,14 @@ input[type="text"] {
 .b-form__nav_panel, .b-form__action_panel {
   width: 100%;
   height: 32px;
-
-/*  Отступ после панели 23px height - margin-bottom */
-  margin-bottom: -9px; 
-  position: relative;
-  top: -32px;
-  z-index: 1;
-
+ 
   background: #eee;
-}
+}                   
 
+	.b-form__nav_panel {
+		margin-bottom: 20px;
+	}
+    
 	/* Список шагов в объявлении */
 	.b-form__nav_list {
 	  list-style: url(<%= asset_path 'form_arrow.png' %>) none;
@@ -331,7 +329,7 @@ input[type="text"] {
 	display: inline-block;
 	position: relative;
 	/* z-index: 1; */
-	line-height: 1;
+	line-height: 1.2em;
 	padding: 0.2em 0 0.3em 17px;
 	cursor: pointer;
 	
@@ -397,4 +395,64 @@ input[type="text"] {
 
 .b-form__birthday {
 	margin-left: 3.5em;
+}                  
+
+
+/*Questions */            
+.b-form__questions_infinity {
+	overflow: hidden;    
+	
+	min-height: 220px;
+}                    
+
+.b-form__questionnaire {
+	margin-bottom: 20px;
 }
+
+.b-form__questions {
+	width: 1000%;   
+	min-height: 250px;
+}
+
+.b-form__question {  
+	width: 400px; 
+	padding: 12px 15px; 
+}
+
+.b-form__question.selected {
+	border: 2px solid #ccc; 
+	padding: 11px 14px;
+}                    
+
+	.b-form__question_answer {
+		display: none;
+	}                 
+	
+	.b-form__question.selected .b-form__question_answer {
+		display: block;
+	}
+
+	.b-form__question_answers_list {
+		list-style: none; 
+		margin: 4px 0 0 0;
+	}
+	
+	.b-form__question_answers_list__item.half {
+		float: left;
+		width: 48%;     
+		margin-right: 1%;      
+		
+	}    
+	
+	.b-form__question_answer_free {
+		width: 225px;
+		height: 60px;
+	}
+	
+	.b-form__question__actions {
+		margin-top: 20px;
+	}                       
+		.b-form__question__action_button.next_question {
+			margin-left: 36px;
+		}
+	
