--- a/app/views/missings/_contacts.html.erb
+++ b/app/views/missings/_contacts.html.erb
@@ -10,14 +10,15 @@
 
   <div class="clear"></div>
   <hr class="b-hr form" />
-  
+
+<%= f.fields_for :user do |user| %>  
 <div class="container_16">
 <div class="grid_8">
 <!-- Входим див, после hr -->
 
  <div class="b-form__field">
-   <%= f.label :author_name, "Ваше имя", :class => "b-form__label" %>
-   <%= f.text_field :author_name %>
+   <%= user.label :name, "Ваше имя", :class => "b-form__label" %>
+   <%= user.text_field :name %>
  </div>
 
 <!-- Выходи из дива для hr -->
@@ -33,11 +34,8 @@
 <!-- Входим див, после hr -->
 
  <div class="b-form__field">
-   <%= f.label :author_phone, "Телефон", :class => "b-form__label" %>
-   <%= f.text_field :author_phone %>
-   <div class="b-form__subfield">
-     <%= f.check_box :author_callback_phone %> <%= f.label :author_callback_phone, "связываться со мной по телефону" %>
-   </div>
+   <%= user.label :phone, "Телефон", :class => "b-form__label" %>
+   <%= user.text_field :phone %>
  </div>
 
 <!-- Выходи из дива для hr -->
@@ -53,52 +51,9 @@
 <!-- Входим див, после hr -->
  
 <div class="b-form__field">
-  <%= f.label :author_email, "Электронная почта", :class => "b-form__label" %>
-  <%= f.text_field :author_email %>
-  <div class="b-form__subfield">
-    <%= f.check_box :author_callback_email %> <%= f.label :author_callback_email, "связываться со мной по электронной почте" %>
-  </div>
+  <%= user.label :email, "Электронная почта", :class => "b-form__label" %>
+  <%= user.text_field :email %>
 </div>
-
-<!-- Выходи из дива для hr -->
-</div>
-</div>
-<!-- End grid_8 and container from new.html.erb -->
-
-  <div class="clear"></div>
-  <hr class="b-hr form" />
-
-<div class="container_16">
-<div class="grid_8">
-<!-- Входим див, после hr -->
-
-  	<div class="b-form__field">
-	  <%= f.label :private_history, "Ограничение доступа к личным данным", :class => "b-form__label" %>
-	  <p>
-		Возможно вы не хотите, чтобы обстоятельства пропажи или контактные данные знали все, вы можете ограничить круг лиц, которые могут это видеть.
-	  </p>
-	
-	  <div class="b-form__subfield_label">Показывать обстоятельства пропажи</div>
-	  <ul class="b-form__radio_list">
-	      <li class="b-form__radio_element">
-	        <%= f.radio_button :private_history, 0 %> <%= f.label :private_history_0, "только рабочей группе" %>
-	      </li>
-	      <li class="b-form__radio_element">
-	        <%= f.radio_button :private_history, 1 %> <%= f.label :private_history_1, "всем" %>
-	      </li>
-	  </ul>
-	
-	  <div class="b-form__subfield_label">Показывать контактные данные</div>
-	  <ul class="b-form__radio_list">
-	      <li class="b-form__radio_element">
-	        <%= f.radio_button :private_contacts, 0 %> <%= f.label :private_contacts_0, "только рабочей группе" %>
-	      </li>
-	      <li class="b-form__radio_element">
-	        <%= f.radio_button :private_contacts, 1 %> <%= f.label :private_contacts_1, "всем" %>
-	      </li>
-	  </ul>
-	
-	</div>
 
 <!-- Выходи из дива для hr -->
 </div>
@@ -113,8 +68,10 @@
 <!-- Входим див, после hr -->
 
 	<div class="b-form__field">
-	  <%= f.label :missing_password, "Пароль к объявлению", :class => "b-form__label" %>
-	  <%= f.text_field :missing_password %>
+	  <%= user.label :password, "Пароль к объявлению", :class => "b-form__label" %>
+	  <%= user.text_field :password %>
 	</div>
 
-  <%= hidden_field_tag "save" %>
+  <%= hidden_field_tag "save" %>        
+
+<% end %>
