--- a/app/views/missings/_form.html.erb
+++ b/app/views/missings/_form.html.erb
@@ -1,7 +1,16 @@
+<div class="container_16 b-form__questions_container l-hidden">
+	<div class="b-form__questions_infinity grid_16">      
+		<div class="t-big b-form__questionnaire"></div>      
+		<div class="b-form__questions">
+		</div>
+	</div>
+</div>
+
 <%= form_for @missing, :url => "/add_missing/save_step.json", :remote => true, :html => { 
 	:multipart => true,
 	:next_step => "/add_missing/" + @missing.next_step,
-	:previous_step => "/add_missing/" + @missing.previous_step } do |f| %>
+	:previous_step => "/add_missing/" + @missing.previous_step,
+	:id => "new_missing" } do |f| %>
 
 <div class="container_16">
 	<div class="grid_8">
