--- a/app/assets/stylesheets/app/b-buttons.css.erb
+++ b/app/assets/stylesheets/app/b-buttons.css.erb
@@ -15,7 +15,7 @@
 	top: 55%;
 }
 
-.ui-icon {
+.b-button_social .ui-icon {
 	background-image: url(<%= asset_path 'socials.png' %>) !important;
 }              
                
